--- a/Retos/Reto1.ipynb
+++ b/Retos/Reto1.ipynb
@@ -21,12 +21,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "i6OhBw054j9i"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.6944444444444445\n"
+          ]
+        }
+      ],
+      "source": [
+        "A=((3+2)/(3*2))**2\n",
+        "print(A)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -74,17 +85,25 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.11.0 64-bit",
+      "display_name": "Python 3.10.5 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.11.0"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.5"
     },
     "vscode": {
       "interpreter": {
-        "hash": "11b101de8802807ccc64a803063ae72c254aae076e4b81c5203b2f2fad9491c4"
+        "hash": "25cf953c3b13aa3bfdfd2d21cf5b1b5e016499c91a26176b30662ddb8d1c5c1d"
       }
     }
   },
