Terminé el ejercició 2

--- a/Retos/Reto1.ipynb
+++ b/Retos/Reto1.ipynb
@@ -52,12 +52,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "0rykWt0J5Gub"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "La paga total es: 672.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "horas = float(input(\"Coloque el numero de horas trabajadas: \"))\n",
+        "pago = float(input(\"Coloque el costo por hora: \"))\n",
+        "\n",
+        "print(f\"La paga total es: {horas * pago}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -85,7 +98,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.10.5 64-bit",
+      "display_name": "Python 3.9.13 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -99,11 +112,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.5"
+      "version": "3.9.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "25cf953c3b13aa3bfdfd2d21cf5b1b5e016499c91a26176b30662ddb8d1c5c1d"
+        "hash": "3924ed30227e34da5a4c68c183321c9d32f94e2bda1bf4a622c4e1f08e1e696d"
       }
     }
   },
