--- a/Retos/Reto1.ipynb
+++ b/Retos/Reto1.ipynb
@@ -83,10 +83,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "OiAbp9z85obS"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Tu IMC es:  24.69\n"
+          ]
+        }
+      ],
+      "source": [
+        "peso = float(input(\"Agrega tu peso: \"))\n",
+        "Estatura = float(input(\"Agrega tu estatura: \"))\n",
+        "\n",
+        "IMC = peso / (Estatura**2)\n",
+        "print(f\"Tu IMC es: {IMC: .2f}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
