--- a/Sesiones/Sesión_1.ipynb
+++ b/Sesiones/Sesión_1.ipynb
@@ -241,42 +241,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.5"
+       "5.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5/2"
+    "10/2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "10"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5//2"
+    "21//2"
    ]
   },
   {
@@ -439,7 +439,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -453,11 +453,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "11b101de8802807ccc64a803063ae72c254aae076e4b81c5203b2f2fad9491c4"
+    "hash": "d643b77defd84bf80711a57200660da7feb76ae1ae56d0a5ac41f5ec618f9f8a"
    }
   }
  },
